cleanup: resolve findbugs issues
Signed-off-by: Alon Bar-Lev <alon.barlev@gmail.com>
Change-Id: I093e1ef64b8a58e8899dd0feaee5b3be112bdfc0